--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.firstapp"
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         multiDexEnabled true
@@ -53,6 +53,11 @@ android {
 
     buildTypes {
         release {
+//
+//          signingConfig signingConfigs.release
+//            minifyEnabled true // Add these lines
+//            shrinkResources true // Add these lines
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt')
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
